Closed
Bug 761123
Opened 13 years ago
Closed 13 years ago
dom/file/FileHandle.cpp:75: error: extra ';'
Categories
(Core :: Storage: IndexedDB, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: gaston, Assigned: gaston)
References
Details
Attachments
(1 file, 1 obsolete file)
|
2.48 KB,
patch
|
janv
:
review+
|
Details | Diff | Splinter Review |
See bottom of http://buildbot.rhaalovely.net/builders/mozilla-central-amd64/builds/412/steps/build/logs/stdio, fallout of bug 726593. Patch in a few.
| Assignee | ||
Comment 1•13 years ago
|
||
Assignee: nobody → landry
Attachment #629750 -
Flags: review?(Jan.Varga)
Updated•13 years ago
|
Attachment #629750 -
Flags: review?(Jan.Varga) → review+
| Assignee | ||
Comment 2•13 years ago
|
||
Whoops there were apparently more occurences of NS_IMPL_EVENT_HANDLER with an extra ;, patch fixing all of them once my build completes.
| Assignee | ||
Comment 3•13 years ago
|
||
This one has all occurences.
Attachment #629750 -
Attachment is obsolete: true
Attachment #629774 -
Flags: review?(Jan.Varga)
Updated•13 years ago
|
Attachment #629774 -
Flags: review?(Jan.Varga) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•