Bug 761123 - Remove extra semicolon at end of NS_IMPL_EVENT_HANDLER() decl. r=janv